--- a/nginx.conf
+++ b/nginx.conf
@@ -17,8 +17,8 @@ server {
     add_header 'Access-Control-Allow-Origin' '*';
     secure_link $arg_token,$arg_expires;
     secure_link_md5 "$secure_link_expires $remote_addr Supernova123!";
-    # if ($secure_link = "") { return 403; }
-    # if ($secure_link = "0") { return 410; }
+    if ($secure_link = "") { return 403; }
+    if ($secure_link = "0") { return 410; }
 
     mp4;
     mp4_buffer_size       20M;
